--- a/day2/index.html
+++ b/day2/index.html
@@ -36,7 +36,7 @@
         function InactiveFriendList (props) {
             return (
               <div>
-              <h2>Active friends</h2>
+              <h2>Inactive friends</h2>
                 <ul>
                    {props.list.map((friend) => (
                     <li key={friend.name}>
