--- a/day3/his_solution_index.html
+++ b/day3/his_solution_index.html
@@ -66,7 +66,7 @@
       )
     }
     function Nav (props) {
-      const languages = ['all', 'javascript', 'python', 'php', 'R']
+      const languages = ['all', 'javascript', 'ruby', 'python']
       return (
         <nav>
           <ul>
