--- a/day4/sol_from_3_day.html
+++ b/day4/sol_from_3_day.html
@@ -66,7 +66,7 @@
       )
     }
     function Nav (props) {
-      const languages = ['all', 'javascript', 'python', 'php', 'R']
+      const languages = ['all', 'javascript', 'ruby', 'python']
       return (
         <nav>
           <ul>
